testcases/negative/missing_required_structured_components.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
N:;;;
END:VCARD
